--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ img{
     width: 100%;
 }
 main{
-    max-width: 900px;
+    max-width: 1200px;
     margin: auto;
     box-shadow: 30px 0 40px rgba(0, 0, 0, .4),
                 -30px 0 40px rgba(0, 0, 0, .4);
@@ -44,19 +44,19 @@ main{
     padding-right: 1rem;
 }
 #landing-text h2{
-    color: #888;
+    color: #777;
 }
 .btn{
-    padding: .5rem 2rem;
-    border: 1px solid #ccc;
+    padding: 1rem 3rem;
+    border: 2px solid #ccc;
     display: inline-block;
-    margin: 2rem 0 0;
+    margin: 3rem 0 0;
     border-radius: 50px;
     color: #333;
-    transition: background .3s;
+    transition: background .5s;
 }
 .btn:hover{
-    background: #f4f4f4;
+    background: #ddd;
 }
 #landing-img{
     background: url(../img/main.webp);
@@ -73,8 +73,8 @@ main{
     color: #fff;
 }
 #header h2{
-    border-left: 1px dotted #fff;
-    border-right: 1px dotted #fff;
+    border-left: 2px dotted #fff;
+    border-right: 2px dotted #fff;
     display: inline-block;
     padding-left: 1rem;
     padding-right: 1rem;
@@ -82,4 +82,43 @@ main{
 .caption{
     padding: .8rem;
     text-align: center;
+}
+.caption::after{
+    content: '';
+    display: block;
+    background: #333;
+    width: 10rem;
+    height: 1px;
+    opacity: 1;
+    margin: .7rem auto .5rem;
+}
+footer{
+    text-align: center;
+    color: #333;
+    margin: auto;
+    padding: 2rem 1rem;
+}
+footer h3{
+    font-size: 3rem;
+    margin-bottom: 0;
+}
+
+/* screen 900-1200px */
+@media(min-width:900px){
+    
+}
+
+/* screen above 1200px */
+@media(min-width: 1200px){
+    #landing{
+        display: flex;
+        height: 100%;
+    }
+    #landing-text,
+    #landing-img{
+        height: 100vh;
+    }
+    .btn{
+        padding: .5rem .2rem;
+    }
 }
