--- a/css/styles.css
+++ b/css/styles.css
@@ -114,3 +114,24 @@ footer p{
     font-size: 1.2rem;
 }
 
+/* screen 900-1200px */
+@media(min-width:900px){
+    h1{
+        font-size: 5rem;
+    }
+    h2{
+        font-size: 2.5rem;
+    }
+    .btn{
+        font-size: 2rem;
+    }
+    .caption h3{
+        font-size: 1.8rem;
+    }
+    .caption p,
+    footer p{
+        font-size: 1.5rem;
+    }
+    
+}
+
